--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <html>
+  <head>
+    <title>Calcu mayor de 3</title>
+    <meta charset="UTF-8" />
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
-
-<body>
-	<div id="app"></div>
-
-	<script src="src/index.ts">
-	</script>
-</body>
-
+  <body>
+    <h3>calculadora de el mayor de 3 numeros ingresados</h3>
+    <p id="rotulo1">ingreseDato1</p>
+    <input type="number" id="dato1" />
+    <p id="rotulo2">ingreseDato2</p>
+    <input type="number" id="dato2" />
+    <p id="rotulo3">ingreseDato3</p>
+    <input type="number" id="dato3" />
+    <p></p>
+    <button id="btn1">calcular</button>
+    <script src="src/index.ts"></script>
+  </body>
 </html>
