--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <h3>calculadora de el mayor de 3 numeros ingresados</h3>
     <p id="rotulo1">ingreseDato1</p>
-    <input type="number" id="dato1" />
+    <input type="text" id="dato1" />
     <p id="rotulo2">ingreseDato2</p>
-    <input type="number" id="dato2" />
+    <input type="text" id="dato2" />
     <p id="rotulo3">ingreseDato3</p>
-    <input type="number" id="dato3" />
+    <input type="text" id="dato3" />
     <p></p>
     <button id="btn1">calcular</button>
     <script src="src/index.ts"></script>
